fix techStack-text layout issue, its is mobile responive

--- a/client/src/components/HoneyCombHero/index.css
+++ b/client/src/components/HoneyCombHero/index.css
@@ -1,26 +1,24 @@
+.hero-container {
+  min-height: 1016px;
+}
+
 .web-author-info {
   height: calc(100vh - 60px);
   min-height: 508px;
   display: flex;
-  flex-flow: column;
   flex-direction: column;
   justify-content: space-around;
   text-align: center;
-  box-sizing: border-box;
   z-index: 9;
+  font-family: 'Roboto', Georgia, 'Times New Roman', Times, serif;
 }
 
 .display-block {
   display: block;
 }
 
-.web-author-info {
-  font-family: 'Roboto', Georgia, 'Times New Roman', Times, serif;
-}
-
 .web-author-name {
   margin-top: 2rem;
-
   font-style: italic;
   font-family: Georgia, 'Times New Roman', Times, serif;
   font-size: 1.2rem;;
@@ -64,11 +62,16 @@
 .techstack-text {
   box-sizing: border-box;
   height: 80vh;
-  /* min-height: 475px; */
+  min-height: 508px;
+  max-height: 640px;
   width: 95%;
   margin-right: auto;
   margin-left: auto;
   text-align: center;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
 .techstack-text div {
@@ -98,7 +101,26 @@
   border-bottom: 1px solid black;
 }
 
+@media(width: 280px) {
+  .techstack-text {
+    margin: 4rem 0;
+  }
+}
+
+@media(width: 320px) {
+  .techstack-text {
+    margin: 4rem 0; 
+  }
+}
+
 @media (min-width: 576px) {
+
+  .hero-container {
+    height: calc(100vh - 60px);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
 
   .web-author-info {
     height: auto;
@@ -135,7 +157,7 @@
     height: 50%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
   }
 
